@@ -56,8 +56,9 @@
 
 #define unless(expr)	if (!(expr))
 
-#define _is_arrayref(f) \
-    ( f && SvOK (f) && SvROK (f) && SvTYPE (SvRV (f)) == SVt_PVAV )
+#define _is_arrayref(f) ( f && \
+     (SvROK (f) || (SvRMAGICAL (f) && (mg_get (f), 1) && SvROK (f))) && \
+      SvOK (f) && SvTYPE (SvRV (f)) == SVt_PVAV )
 
 #define CSV_XS_SELF					\
     if (!self || !SvOK (self) || !SvROK (self) ||	\
@@ -1143,7 +1144,7 @@ print (self, io, fields)
 
     CSV_XS_SELF;
     unless (_is_arrayref (fields))
-      croak ("Expected fields to be an array ref");
+	croak ("Expected fields to be an array ref");
 
     av = (AV*)SvRV (fields);
 
